--- a/templates/mysumes.html
+++ b/templates/mysumes.html
@@ -76,8 +76,8 @@
     <div class="sidebar">
         <div class="title">
             <img src="../images/picture.png" data-action="zoom">
-            <h1>十三先生</h1>
-            <h2>软件工程</h2>
+            <h1>王金文</h1>
+            <h2>java软件开发</h2>
         </div>
         <ul class="side-info">
             <li class="someRight">
@@ -268,7 +268,7 @@
             </li>
             <li class="someRight">
                 <dt><i class="icon-bookmark"></i>Self evaluation. 自我评价</dt>
-                <dd>对色彩敏感，具有良好的美感和审美观，掌握平面构成、色彩构成、图案造型、字体设计、标志设计；</dd>
+                <dd>有很好的代码书写习惯，逻辑性强。善于沟通，喜欢团队合作。</dd>
             </li>
         </ul>
     </div>
@@ -287,70 +287,89 @@
                 <ul class="exp">
                     <li>
                         <div class="circle"></div>
-                        <h4>官网微信购票</h4>
-                        <p>项目描述： 票务系统-微信购票，绑定微信公众号，可通过微信公众号进行购票，登录、注册、修改、访问个人中心、购票、退票等操作。</p>
+                        <h4>微信购票</h4>
+                        <p>项目描述：绑定微信公众号，可通过微信公众号进行购票，访问个人中心，退票等操作。前端项目，采用ionic+angularjs 进行开发；功能：下单， 查看消费记录，余额，支付，退订。</p>
                         <p>
-                            责任描述：1、根据需求文档进行界面设计工作，界面包括票列表界面，订单填写界面，微信支付，个人中心界面，订单详情界面等。如订单填写，在价格日历里显示票的价格，选中之后，根据票的要求，是否填写出行人，是否需要证件在界面展示。
-                            2、根据客户要求，修改界面色调。
-                            3、与开发沟通，去除无法完成的样式。</p>
+                            责任描述：1.根据需求文档进行编码工作，登录公众号进行参数配置，验证accesstoken，获取openid，开发票列表界面，订单填写界面，微信支付宝支付，个人中心界面，订单详情界面等。如订单填写，在价格日历里显示票的价格，选中之后，根据票的要求，是否填写出行人，是否需要证件在界面展示，下单时，将信息传到票务系统，票务系统进行拆解信息，验证是否可下单后，进行下单。
+                            2.针对已开发功能模块进行维护修改
+                            3.发布上线之后的维护，根据客户反馈进行更改</p>
                     </li>
                     <li>
                         <div class="circle"></div>
-                        <h4>三星欣辰专卖店</h4>
-                        <p>工作描述：1、独立完成店铺日常设计装修与活动图设计及装修；
-                            2、根据公司的活动方案，高效的设计出精美的版式；
-                            3、每款产品图片的美化和修改；
-                            4、配合技术和公司计划，修改调整页面的细节；</p>
+                        <h4>OTA项目</h4>
+                        <p>项目描述：将各大ota请求的不同格式数据，进行拆解、封装、处理，转换成统一的格式发往票务系统。</p>
+                        <p>
+                            责任描述：1.讨论需求，编写需求文档，搭建项目，研究xsl转换，建立表结构，进行代码编写
+                            2.与各大ota联调，上线。
+                            3.发布上线之后的维护</p>
+                    </li>
+                    <li>
+                        <div class="circle"></div>
+                        <h4>官网购票</h4>
+                        <p>项目描述：建立购票官网，客户通过官网下单，微信或支付宝支付。然后发短信到客户手机，至线下取票，该项目是获取的票务系统的可购买的票种信息，基本框架采用 Mybatis与后台数据库的多数据源进行交互，业务控制层使用 Spring管理类以及对象，前端使用HTML进行表现层的开发，通过ajax访问票务系统返回所需数据。
+                            功能：购票，个人信息，退票，查看订单。</p>
+                        <p>
+                            责任描述：1.讨论需求，编写需求文档，搭建项目，建立表结构，进行代码编写
+                            3.发布上线之后的维护</p>
+                    </li>
+                    <li>
+                        <div class="circle"></div>
+                        <h4>微信项目</h4>
+                        <p>项目描述：维护微信菜单，消息接管，微信卡券，拉取用户信息</p>
+                        <p>
+                            责任描述：1.讨论需求，搜索开源的封装好的微信sdk，搭建项目，研究微信公众号开发，建立表结构，进行代码编写
+                            3.发布上线之后的维护</p>
                     </li>
                 </ul>
-                <h3><img src="" data-action="zoom"><span>临沂大智科技有限公司（2016.6 - 2017.5）</span></h3>
+                <h3><img src="" data-action="zoom"><span>上海宏巍信息技术有限公司（2016.8 - 2017.7）</span></h3>
                 <ul class="exp">
                     <li>
                         <div class="circle"></div>
-                        <h4></h4>
-                        <p>工作描述： 按照需求进行设计与简易代码编写</p>
+                        <h4>宏巍商铺旺 ERP （独立版本-泰璞）</h4>
+                        <p>项目描述：该项目基于产品的进行二次开发，应客户需求针对仓储管理、订单管理、商品及售后管理的更改，如个人开发
+                            职责其中的一部分：采购入库到货流程，在仓库管理模块新增"到货"模块，主要新增页面包括：到货单、到货
+                            记录；功能：新建到货单、计算及更新采购、到货、入库单据的数量、确认到货更新单据状态、在手持设备中
+                            操作采购入库，确认入库后，在 ERP 中生成一张未确认的到货单、到货单入库等等
+                            基本框架采用 Hibernate与后台数据库数据源进行交互，业务控制层使用 Spring管理类以及对象，而使用 Dora
+                            do 集成框架（类似 JQuery EasyUI、ExtJs）进行表现层的开发，为 Web 应用提供更加丰富、友好的用户界面，
+                            同时大幅提高展现层的开发效率</p>
                         <p>
-                            责任描述：1、根据客户需求进行页面设计与修改，完成切图以及简易代码编写
-                            2、由研发部共同用 div+css Css3 HTML实现页面的整体架构。
-                            3、其次使用bootstrap框架实现页面的响应式布局，让用户获得更好的用户体验服务</p>
+                            责任描述：1.根据需求文档进行编码工作，在采购入库之间新增到货单功能，以及支持 PDA手持终端
+                            2.针对已开发功能模块交由测试组进行测试工作，测试通过后协同运维发布上线
+                            3.发布上线之后的维护，根据客户反馈进行更改</p>
+                    </li>
+                    <li>
+                        <div class="circle"></div>
+                        <h4>宏巍商铺旺 ERP （产品）</h4>
+                        <p>项目描述：宏巍商铺旺 ERP——订单收费版，全线 BS 架构，随时可以了解店铺销售情况。全网首创的电商 ERP 新模式。
+                            经淘宝扶持商家实际效果收费，降低初期卖家的运营成本，管理店铺正常的打单、发货、财务等日常工作
+                            主要功能：会员管理、商品管理、采购管理、订单管理、库存管理、报表分析等宏巍商铺旺 ERP——企业版采用 BS 架构，可以管理多类目，多平台的店铺。基于云服务的支持，集成了 ERP+CRM 的应用完美融合。能够帮助商家提高运营能力、降低运营成本、提升商家管理效率。实现库存的发货精准，不漏发错发快速优化整体供应链流程，同时提供销售、采购、绩效、数据等多种报表分析
+                            主要功能：自动审单，快速发货，智能拣货，库存同步，采购入库，库存成本等等
+                            基本框架采用 Hibernate与后台数据库数据源进行交互，业务控制层使用 Spring管理类以及对象，而使用 Dora
+                            do 集成框架（类似 JQuery EasyUI、ExtJs）进行表现层的开发，为 Web 应用提供更加丰富、友好的用户界面，
+                            同时大幅提高展现层的开发效率</p>
+                        <p>
+                            责任描述：1.电商 ERP 产品大众版本及独立版本的后期维护，对接各大电商平台以及和接口组进行联调，并协助售后处理用户问题
+                            2.根据客户需求更改功能模块，针对已更改功能点交由测试组进行测试工作，测试通过后协同运维发布上线</p>
                     </li>
                 </ul>
 
-                <h3>work1.个人作品</h3>
+                <h3>tool.工具</h3>
                 <ul class="exp">
                     <li>
                         <div class="circle"></div>
                         <h4>
-                            <span>网页-电商</span>
+                            <span>框架</span>
                         </h4>
-                        <img src="../images/ds/01.png" data-action="zoom">
-                        <img src="../images/ds/02.jpg" data-action="zoom">
+                        <p>1.Spring+MyBatis的整合；2.三大框架Struts+Spring+Hibernate;</p>
                     </li>
                     <li>
                         <div class="circle"></div>
                         <h4>
-                            <span>app-foot</span>
+                            <span>软件</span>
                         </h4>
-                        <img src="../images/ui/01.png" data-action="zoom">
-                        <img src="../images/ui/02.png" data-action="zoom">
-                        <img src="../images/ui/03.png" data-action="zoom">
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <h4>
-                            <span>app-宠物</span>
-                        </h4>
-                        <img src="../images/ui/04.png" data-action="zoom">
-                        <img src="../images/ui/05.png" data-action="zoom">
-                    </li>
-                    <li>
-                        <div class="circle"></div>
-                        <h4>
-                            <span>app-幸福家居</span>
-                        </h4>
-                        <img src="../images/ui/06.png" data-action="zoom">
-                        <img src="../images/ui/07.png" data-action="zoom">
-                        <img src="../images/ui/08.png" data-action="zoom">
+
+                        <p>1.eclipse；2.webstorm；3.MySQL Workbench </p>
                     </li>
                 </ul>
             </li>
@@ -359,7 +378,7 @@
     </div>
 </div>
 <footer>
-    <p><a href="print.html" target="_blank">下载</a>. 最后更新于2017年9月6日</p>
+    <!--<p><a href="print.html" target="_blank">下载</a>. 最后更新于2017年9月6日</p>-->
 </footer>
 <script src="../assets/js/zoom.min.js"></script>
 </body>
